Fix extension, add test

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     },
     "dependencies": {
         "buster": "~0.2"
+    },
+    "devDependencies": {
+        "buster-configuration": "~*"
     }
 }
