--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "buster-jstestdriver",
-    "version": "0.2.0",
+    "version": "0.2.1",
     "description": "Run JsTestDriver tests with Buster.JS",
     "homepage": "http://busterjs.org/docs/buster-assertions",
     "author": { "name": "August Lilleaas and Christian Johansen" },
@@ -19,7 +19,7 @@
         "url": "git://gitorious.org/buster/buster-jstestdriver.git"
     },
     "dependencies": {
-        "buster": "~0.4"
+        "buster": ">=0.4.5"
     },
     "devDependencies": {
         "buster-configuration": "*"
