--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "type": "git",
         "url": "git://gitorious.org/buster/buster-jstestdriver.git"
     },
+    "scripts": {
+        "test": "./run-tests"
+    },
     "dependencies": {
         "buster": ">=0.4.5",
         "buster-html-doc": ">=0.1"
