--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "url": "git://gitorious.org/buster/buster-jstestdriver.git"
     },
     "scripts": {
-        "test": "node node_modules/buster/bin/buster-test"
+        "test": "node node_modules/buster/bin/buster-test",
+        "test-debug": "node --debug-brk node_modules/buster/bin/buster-test"
     },
     "dependencies": {
         "buster-html-doc": ">=0.1"
